--- a/modrinthdesc.html
+++ b/modrinthdesc.html
@@ -2,13 +2,12 @@
 
 Want to play modded Minecraft? Don’t wanna play a new game with how some Mod packs are? Want to play ***Vanilla but Plus?***
 
+WARNING: This pack is for friends group and SMP. The WHOLE pack CAN AND WILL change at any time. If you like your version you are always welcome to use the older versions of the pack. 
 ---
 
-Currently, I am testing this Pack out for that Vanilla Feel but with a bit more spice! RPG elements can be found but are not the main focus
+Currently, I am testing this Pack out for that Vanilla Feel but with a bit more spice!
 
-Come marvel at the new world generation found thanks to the Terralith team and their mods for each dimension! Find the new dungeons and structures that YUNG and some other mods add! 
-
-Make your home feel like a real home with new items and blocks that keep the vanilla feel! Maybe even do it all in the space of one block with miniscaled?
+Make your home feel like a real home with new items and blocks that keep the vanilla feel!
 
 --- 
 
@@ -32,188 +31,10 @@ Make your home feel like a real home with new items and blocks that keep the van
 
 <details>
 <summary>Mods</summary>
-<ul>
-    <li>
-        <details>
-        <summary>Aesthetics</summary>
-        <ul>
-        <li><a href="https://modrinth.com/mod/3dskinlayers">3D Skin Layers</a></li>
-        <li><a href="https://modrinth.com/datapack/animated-doors">Animated Doors</a></li>
-        <li><a href="https://modrinth.com/mod/cave-dust">Cave Dust</a></li>
-        <li><a href="https://modrinth.com/mod/better-third-person">Better Third Person</a></li>
-        <li><a href="https://modrinth.com/mod/autopath">Automatic Path</a></li>
-        <li><a href="https://modrinth.com/mod/ambientsounds">AmbientSounds</a></li>
-        <li><a href="https://modrinth.com/mod/eating-animation">Eating Animation</a></li>
-        <li><a href="https://modrinth.com/mod/fallingleaves">Falling Leaves</a></li>
-        <li><a href="https://modrinth.com/mod/let-sleeping-dogs-lie">Let Sleeping Dogs Lie</a></li>
-        <li><a href="https://modrinth.com/mod/pandas-falling-trees">Panda's Falling Tree's</a></li>
-        <li><a href="https://modrinth.com/mod/realisticsleep">Realistic Sleep</a></li>
-        <li><a href="https://modrinth.com/mod/seamless-loading-screen">Seamless Loading Screen</a></li>
-        <li><a href="https://modrinth.com/mod/more-mob-variants">More Mob Variants</a></li>
-        <li><a href="https://modrinth.com/mod/not-enough-animations">Not Enough Animations</a></li>
-        <li><a href="https://modrinth.com/mod/spawn-animations">Spawn Animations</a></li>
-        <li><a href="https://modrinth.com/mod/soul-fire-d">Soul Fire'd</a></li>
-        <li><a href="https://modrinth.com/mod/toggle-item-frames">Toggle Item Frames</a></li>
-        <li><a href="https://modrinth.com/mod/villager-names-serilum">Villager Names</a></li>
-        <li><a href="https://modrinth.com/mod/visual-workbench">Visual Workbench</a></li>
-        <li><a href="https://modrinth.com/mod/visuality">Visuality</a></li>
-        <li><a href="https://modrinth.com/mod/wavey-capes">Wavey Capes</a></li>
-        <li><a href="https://modrinth.com/mod/superfancyclouds-refabricated">SuperFancyClouds: Rearchitected</a></li>
-        <li><a href="https://modrinth.com/mod/presence-footsteps">Presence Footsteps</a></li>
-        <li><a href="https://modrinth.com/mod/head-in-the-clouds">Head in the Clouds</a></li>
-        <li><a href="https://modrinth.com/mod/disguiseheads">DisguiseHeads</a></li>
-        <li><a href="https://modrinth.com/mod/lambdynamiclights">LambDynamicLights</a></li>
-        <li><a href="https://modrinth.com/mod/make_bubbles_pop">Make Bubbles Pop</a></li>
-        <li><a href="https://modrinth.com/mod/portfolio">Portfolio</a></li>
-        </ul>
-        </details>
-        </li>
-        <li>
-            <details>
-            <summary>World Gen</summary>
-            <ul>
-            <li><a href="https://modrinth.com/mod/deeperdarker">Deeper and Darker</a></li>
-            <li><a href="https://modrinth.com/mod/incendium">Incendium</a></li>
-            <li><a href="https://modrinth.com/mod/tectonic">Tectonic</a></li>
-            <li><a href="https://modrinth.com/mod/terralith">Terralith</a></li>
-            <li><a href="https://modrinth.com/mod/this-rocks">This Rocks!</a></li>
-            <li><a href="https://modrinth.com/mod/nullscape">Nullscape</a></li>
-            <li><a href="https://modrinth.com/mod/when-dungeons-arise">When Dungeons Arise</a></li>
-            <li><a href="https://modrinth.com/user/YUNGNICKYOUNG">YUNG's Everything</a></li>
-            </ul>
-            </details>
-            </li>
-<li>
-<details>
-<summary>UI</summary>
-<ul>
-<li><a href="https://modrinth.com/mod/advancement-plaques">Advancement Plaques</a></li>
-<li><a href="https://modrinth.com/mod/appleskin">AppleSkin</a></li>
-<li><a href="https://modrinth.com/mod/axolotl-buckets">Axolotl Buckets</a></li>
-<li><a href="https://modrinth.com/mod/betterf3">BetterF3</a></li>
-<li><a href="https://modrinth.com/mod/better-stats">Better Statistics Screen</a></li>
-<li><a href="https://modrinth.com/mod/cherished-worlds">Cherished Worlds</a></li>
-<li><a href="https://modrinth.com/mod/continue">Continue Button</a></li>
-<li><a href="https://modrinth.com/mod/item-highlighter">Item Highlight</a></li>
-<li><a href="https://modrinth.com/mod/highlight">Highlight</a></li>
-<li><a href="https://modrinth.com/mod/detail-armor-bar">Detail Armor Bar</a></li>
-<li><a href="https://modrinth.com/mod/inventory-profiles-next">Inventory Profiles Next</a></li>
-<li><a href="https://modrinth.com/mod/jei">Just Enough Items</a></li>
-<li><a href="https://modrinth.com/mod/modmenu">Mod Menu</a></li>
-<li><a href="https://modrinth.com/mod/status-effect-bars">Status Effect Bars</a></li>
-<li><a href="https://modrinth.com/mod/smooth-swapping">Smooth Swapping</a></li>
-<li><a href="https://modrinth.com/mod/xaeros-minimap">Xaero's Minimap</a> + <a href="https://modrinth.com/mod/xaeros-world-map">Xaero's World Map</a> + <a href="">XaeroZoomout</a></li>
-<li><a href="https://modrinth.com/mod/rbip">Recipe Book is Pain</a></li>
-<li><a href="https://modrinth.com/mod/deathlog">DeathLog</a></li>
-<li><a href="https://modrinth.com/mod/item-borders">Item Borders</a></li>
-<li><a href="https://modrinth.com/mod/tiny-item-animations">Tiny Item Animations</a></li>
+Always Changing!
+You can check out the full list and change log here 
+https://github.com/Pixelbays/VanillaPlusMPPublic/blob/main/changelog.md
 
-</ul>
-</details>
-</li>
-<li>
-<details>
-<summary>Gameplay Mechs</summary>
-<ul>
-<li><a href="https://modrinth.com/mod/better-combat">Better Combat</a></li>
-<li><a href="https://modrinth.com/mod/betterleads">BetterLeads</a></li>
-<li><a href="https://modrinth.com/mod/better-advancements">Better Advancements</a></li>
-<li><a href="https://modrinth.com/mod/carry-on">Carry on</a></li>
-<li><a href="https://modrinth.com/mod/companion-bats">Companion bats</a></li>
-<li><a href="https://modrinth.com/mod/companion">Companion 🐕</a></li>
-<li><a href="https://modrinth.com/mod/creeper-overhaul">Creeper Overhaul</a></li>
-<li><a href="https://modrinth.com/mod/immersiveportals">Immersive Portals</a></li>
-<li><a href="https://modrinth.com/mod/indypets">IndyPets - Independent Pets</a></li>
-<li><a href="https://modrinth.com/mod/easy-anvils">Easy Anvils</a></li>
-<li><a href="https://modrinth.com/mod/enchantments-plus">Enchantments-Plus</a></li>
-<li><a href="https://modrinth.com/mod/easy-magic">Easy Magic</a></li>
-<li><a href="https://modrinth.com/mod/fwaystones">Fabric Waystones</a></li>
-<li><a href="https://modrinth.com/mod/gravestones">Gravestones</a></li>
-<li><a href="https://modrinth.com/mod/origins">Origins</a></li>
-<li><a href="https://modrinth.com/mod/origins-classes">Origins: Classes</a></li>
-<li><a href="https://modrinth.com/mod/altorigingui">Alternate Origin GUI</a></li>
-<li><a href="https://modrinth.com/plugin/simple-voice-chat">Simple Voice Chat</a> + <a href=""> Chat Interaction</a></li>
-<li><a href="https://modrinth.com/mod/miniscaled">MiniScaled</a></li>
-<li><a href="https://modrinth.com/mod/sound-physics-remastered">Sound Physics Remastered</a></li>
-<li><a href="https://modrinth.com/mod/tax-free-levels">Tax Free Levels</a></li>
-<li><a href="https://modrinth.com/mod/tinyallies">Tiny Allies</a></li>
-<li><a href="https://modrinth.com/mod/toms-storage">Tom's Simple Storage Mod</a></li>
-<li><a href="https://modrinth.com/mod/travelersbackpack">Traveler's Backpack</a></li>
-<li><a href="https://modrinth.com/mod/universal-shops">Universal Shops</a></li>
-<li><a href="https://modrinth.com/mod/smeltingtouch">Smelting Touch</a></li>
-<li><a href="https://modrinth.com/mod/spyglass-astronomy">Spyglass Astronomy</a></li>
-<li><a href="https://modrinth.com/mod/twigs">Twigs</a></li>
-<li><a href="https://modrinth.com/mod/vein-mining">Vein Mining</a></li>
-<li><a href="https://modrinth.com/mod/bountiful">Bountiful</a></li>
-<li><a href="https://modrinth.com/mod/bettersmithingtable">Better Smithing Table</a></li>
-</ul>
-</details>
-</li>
-<li>
-<details>
-<summary>Blocks and items</summary>
-<ul>
-<li><a href="https://modrinth.com/mod/another-furniture">Another Furniture</a></li>
-<li><a href="https://modrinth.com/mod/beautify-refabricated">Beautify: Refabricated</a></li>
-<li><a href="https://modrinth.com/mod/connectible_chains">Connectible Chains [Fabric]</a></li>
-<li><a href="https://modrinth.com/mod/autoslabs">AutoSlabs</a></li>
-<li><a href="https://modrinth.com/mod/displaycase">Display Case</a></li>
-<li><a href="https://modrinth.com/mod/diagonal-windows">Diagonal Windows</a></li>
-<li><a href="https://modrinth.com/mod/diagonal-fences">Diagonal Fences</a></li>
-<li><a href="https://modrinth.com/mod/extshape">Extended block shapes</a></li>
-<li><a href="https://modrinth.com/mod/just-player-heads">Just Player Heads</a></li>
-<li><a href="https://modrinth.com/mod/lanterns-bow">Lanterns Belong on Walls</a></li>
-<li><a href="https://modrinth.com/mod/farmers-delight-fabric">Farmer's Delight [Fabric]</a></li>
-</ul>
-</details>
-</li>
-<li>
-<details>
-<summary>Mobs</summary>
-<ul>
-<li><a href="https://modrinth.com/mod/snuffles-fabric">Snuffles (Fabric)</a></li>
-<li><a href="https://modrinth.com/mod/mythic-mounts">Mythic Mounts</a></li>
-</ul>
-</details>
-</li>
-
-<li>
-<details>
-<summary>Items</summary>
-<ul>
-<li><a href="https://modrinth.com/mod/immersive-armors">Immersive Armors</a></li>
-<li><a href="https://modrinth.com/mod/immersive-melodies">Immersive Melodies</a></li>
-<li><a href="https://modrinth.com/mod/harvest-scythes">Harvest Scythes</a></li>
-</ul>
-</details>
-</li>
-<li>
-    <details>
-    <summary>Client</summary>
-    <ul>
-    <li><a href="https://modrinth.com/mod/lighty">Lighty</a></li>
-    <li><a href="https://modrinth.com/mod/ping-wheel">Ping Wheel</a></li>
-    <li><a href="https://modrinth.com/mod/no-resource-pack-warnings">No Resource Pack Warnings</a></li>
-    <li><a href="https://modrinth.com/mod/notebook">Vanilla Notebook</a><b> This NEEDS to be removed from the list for servers</b></li>
-    <li><a href="https://modrinth.com/mod/midnightcontrols">MidnightControls</a></li>
-    <li><a href="https://modrinth.com/mod/nether-coords">Nether Coords</a></li>
-    <li><a href="https://modrinth.com/mod/no-chat-reports">No Chat Reports</a></li>
-    <li><a href="https://modrinth.com/mod/switcheroo">Switcheroo</a></li>
-    <li><a href="https://modrinth.com/mod/paxi">Paxi</a></li>
-    </ul>
-    </details>
-    </li>
-<li>
-<details>
-<summary>Server</summary>
-<ul>
-<li><a href="https://modrinth.com/mod/chunky">Chunky</a></li>
-<li><a href="https://modrinth.com/mod/antighost">AntiGhost</a></li>
-</ul>
-</details>
-</li>
-
-</ul>
 </details>
 
 --- 
@@ -222,12 +43,8 @@ Make your home feel like a real home with new items and blocks that keep the van
 <summary>Reasorce Packs and Shaders</summary>
 
 Resource Packs:<br>
-I added a couple of resource packs you can use whatever pack you enjoy. I enjoy <a href=https://www.curseforge.com/minecraft/texture-packs/stay-true>Stay True</a>, However, some people in my group enjoy <a href="https://modrinth.com/resourcepack/faithful-32x">Faithful</a>.
-
----
-
-Shaders:<br>
-Due to the Immersive Portal mod I had to remove the shaders I used, I know their wiki says some shaders support it. I have just gone playing with out them, if you want to suggest one do it on discord.
+I enjoy <a href=https://www.curseforge.com/minecraft/texture-packs/stay-true>Stay True</a>,
+However, some people in my group enjoy <a href="https://modrinth.com/resourcepack/faithful-32x">Faithful</a>.
 
 </details>
 
